--- a/src/main/resources/templates/product/brand.html
+++ b/src/main/resources/templates/product/brand.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Gentle Gourmet | Category & Brand</title>
+    <title>Gentle Gourmet | Brand</title>
     <!-- Viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -800,7 +800,7 @@
           <!-- Breadcrumb-->
           <nav class="mb-4" aria-label="breadcrumb">
             <ol class="breadcrumb flex-lg-nowrap">
-              <li class="breadcrumb-item"><a class="text-nowrap" href="../home.html"><i class="ci-home"></i>Home</a></li>
+              <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/home}"><i class="ci-home"></i>Home</a></li>
               <li class="breadcrumb-item text-nowrap active" aria-current="page">Brand</li>
             </ol>
           </nav>
