--- a/src/main/resources/templates/cook/recipe.html
+++ b/src/main/resources/templates/cook/recipe.html
@@ -562,7 +562,7 @@
             <div class="order-lg-2 mb-3 mb-lg-0 pt-lg-2">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb flex-lg-nowrap justify-content-center justify-content-lg-start">
-                        <li class="breadcrumb-item"><a class="text-nowrap" href="recipe-list.html"><i
+                        <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/recipe-list}"><i
                                 class="ci-view-list"></i>Recipe List</a>
                         </li>
                         <li class="breadcrumb-item text-nowrap active" aria-current="page">Recipe</li>
