--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -832,14 +832,14 @@
         <!-- main-extra-padding -->
         <div id="main-extra-padding">
 
-            <!-- Hashtag Search Success alert -->
+            <!-- addToCart Success alert -->
             <div th:if="${cartSuccessMessage}" class="alert alert-info d-flex" role="alert">
                 <div class="alert-icon">
                     <i class="ci-announcement"></i>
                 </div>
                 <div>[[${cartSuccessMessage}]]</div>
             </div>
-            <!-- Product Search Failure alert -->
+            <!-- addToCart Failure alert -->
             <div th:if="${cartFailureMessage}">
                 <div class="alert alert-danger d-flex" role="alert">
                     <div class="alert-icon">
